# Mini_Team2_Home_Project

./: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
backend-fastapi/: README.md  requirements.txt
backend-fastapi/app/: main.py
backend-fastapi/app/controllers/: analysis.py  post.py
backend-fastapi/app/data/: alio_master_table.xlsx
backend-fastapi/app/routes/: analysis.py
backend-fastapi/app/services/: analysis.py  predict_employee_ml.py
backend/data/: alio_master_table.csv  flexible_table.csv  institution_table.csv  risk_table.csv
backend/scripts/: init.sql  init_data.py  init_data.py.deprecated  test_connection.py
backend/src/app/controllers/: analysis.py  auth.py  post.py
backend/src/app/routes/: analysis.py  auth.py  post.py
backend/src/app/schemas/: analysis.py  auth.py  post.py
backend/src/app/services/: analysis.py  auth.py  post.py  predict_employee_ml.py
backend/src/app/utils/: database.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/frontend/: README.md
frontend/src/: App.js  App.jsx  index.css
frontend/src/Header/: Menu.jsx
frontend/src/api/: DashboardApi.js  DashboardApi.jsx  PredictApi.js  PredictApi.jsx
frontend/src/components/: AttritionRiskCard.js  GallerySlider.jsx  GaugeChart.jsx  HealthDiagnosisCard.js  InputPanel.jsx  RecruitmentGaugeCard.js  ResultPanel.jsx  RiskSignalCard.js  SalaryCard.js  WorkFlexibilityCard.js
(+23 files in other folders)
